--- a/Blind/.classpath
+++ b/Blind/.classpath
@@ -5,5 +5,9 @@
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.DEPENDENCIES"/>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="gen"/>
+	<classpathentry kind="lib" path="E:/编程/adt-bundle-windows-x86_64/sdk/platforms/android-21/android.jar"/>
+	<classpathentry kind="lib" path="libs/SpeechApi.jar"/>
+	<classpathentry kind="lib" path="libs/locSDK_3.1.jar"/>
+	<classpathentry kind="lib" path="libs/baidumapapi_v3_0_0.jar"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
