--- a/Blind/bin/AndroidManifest.xml
+++ b/Blind/bin/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@android:style/Theme.NoTitleBar.Fullscreen" >
         <meta-data
             android:name="com.baidu.lbsapi.API_KEY"
             android:value="8Bi6CbGsqfosVpGtpGek2Rdk" />
